tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/amd/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.


==== DifferentNamesNotSpecified/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
                           ~~~~~
!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
    }
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;